--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     </div>
     <ul class="social">
         <li>
-            <a href="https://instagram.com/pedroneto1502" target="blank"> <img src="/imagens/insta.svg" alt="Instagram"></a>
+            <a href="https://instagram.com/pedroneto1502" target="blank"> <img src="imagens/insta.svg" alt="Instagram"></a>
         </li>
 
         <li>
-            <a href="https://linkedin.com" target="blank"> <img src="/imagens/linkedin.svg" alt="Linkedin"></a>
+            <a href="https://linkedin.com" target="blank"> <img src="imagens/linkedin.svg" alt="Linkedin"></a>
         </li>
 
         <li>
-            <a href="https://github.com/PedroNetos" target="blank"> <img src="/imagens/github.svg" alt="Github"></a>
+            <a href="https://github.com/PedroNetos" target="blank"> <img src="imagens/github.svg" alt="Github"></a>
         </li>
 
         <li>
-            <a href="https://wa.me/5581998258202" target="blank"> <img src="/imagens/whatsapp.png" alt="Whatsapp"></a>
+            <a href="https://wa.me/5581998258202" target="blank"> <img src="imagens/whatsapp.png" alt="Whatsapp"></a>
         </li>
     </ul>
 
